[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "3.10.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
